--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 :root {
   --max-width: 1100px;
@@ -25,7 +27,10 @@ body {
   overflow-x: hidden;
 }
 
-
+h1 {
+  font-family: "Playfair";
+  font-weight:600;
+}
 
 a {
   color: inherit;
